Fix save-graph-button overflow

--- a/src/styles/dropdown.css
+++ b/src/styles/dropdown.css
@@ -8,6 +8,10 @@
     align-items: center;
 }
 
+#save-graph-button {
+    height: 100%;
+}
+
 #save-graph-dropdown {
     display: none;
     background-color: var(--main-color);
